# rustagram

./: .dockerignore  .env.sample  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  Dockerfile.bak  LICENSE  Makefile  README.md  diesel.toml  docker-compose.yaml  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
hooks/: pre-commit.sh
migrations/: 20241224080651_create_database_function.down.sql  20241224080651_create_database_function.up.sql  20241224080654_create_user_table.down.sql  20241224080654_create_user_table.up.sql  20241225142441_create_token_table.down.sql  20241225142441_create_token_table.up.sql
src/: main.rs
src/app/: mod.rs
src/app/auth/: controller.rs  dto.rs  mod.rs  service.rs
src/app/auth/forgot_password/: controller.rs  dto.rs  service.rs
src/app/auth/login/: controller.rs
src/app/auth/reset_password/: controller.rs
src/app/health/: controller.rs
src/app/user/: controller.rs
src/common/: mod.rs
src/common/dto/: mod.rs  web_response.rs
src/common/errors/: mod.rs
src/common/query/: template.rs
src/common/service/: email.rs  mod.rs
src/common/service/jwt/: claims.rs  generate_token.rs  mod.rs  token.rs
src/common/service/rabbitmq/: channel.rs  consumer.rs  consumer_tag.rs  mod.rs  publish.rs  queue_name.rs
src/entity/: token.rs  user.rs
src/www/html/: register_template.html  reset_password_template.html  verify_account_template.html
