[package]
name = "rustagram"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.11.6"
actix-web = "4.9.0"
actix-multipart = "0.7.2"
image = "0.25.5"
lapin = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
once_cell = "1.20.2"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
bcrypt = "0.16"
validator = { version = "0.19.0", features = ["derive"] }
clippy = { version = "*", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
redis = "0.27.6"
lettre = "0.11"
deadpool = "0.12.1"
deadpool-lapin = "0.12.1"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"

[dev-dependencies]
rusty-hook = "^0.11.2"
criterion = "0.5.1"


[features]
default = []
