[package]
name = "rustagram"
version = "0.1.0"
edition = "2021"
authors = ["Abdurrahman Harits Ghiffary"]
categories = ["Social"]
description = "Instagram Clone API Build in Rust"
license = "MIT"

[dependencies]

# Main Web Framework
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"

# Logging and Tracing
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.11.6"

# Utilities
image = "0.25.5"
dotenvy = "0.15"
tokio = { version = "1.42.0", features = ["full"] }
once_cell = "1.20.2"
tokio-stream = "0.1"

# Message Queue 
lapin = "2.5.0"
deadpool-lapin = "0.12.1"

# Pooling
deadpool = "0.12.1"

# Serialization and Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
validator = { version = "0.19.0", features = ["derive"] }

# Authentication and Security
jsonwebtoken = "9.3.0"
bcrypt = "0.16"

# Database and Caching
redis = "0.27.6"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# Email
lettre = "0.11"

# Linter
clippy = { version = "*", optional = true }

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 

[dev-dependencies]
criterion = "0.5.1"


[features]
default = []
